--- a/index.html
+++ b/index.html
@@ -18,10 +18,27 @@
   <div id="menu">
     <div class="menu-header">Word Looper</div>
     <div class="menu-options">
-      <button id="start-btn" class="menu-btn">Start</button>
-      <button class="menu-btn">Quick Play</button>
-      <button class="menu-btn">Settings</button>
+      <button id="play-btn" class="menu-btn border-green-dark text-green-dark">Play!</button>
+      <button class="menu-btn border-black">Settings</button>
+      <button class="menu-btn border-black">Credits</button>
     </div>
+  </div>
+  <div id="levels" class="hidden!">
+    <button class="level-btn" data-level="1">1</button>
+    <button class="level-btn" data-level="2">2</button>
+    <button class="level-btn" data-level="3">3</button>
+    <button class="level-btn" data-level="4">4</button>
+    <button class="level-btn" data-level="5">5</button>
+    <button class="level-btn" data-level="6">6</button>
+    <button class="level-btn" data-level="7">7</button>
+    <button class="level-btn" data-level="8">8</button>
+    <button class="level-btn" data-level="9">9</button>
+    <button class="level-btn" data-level="10">10</button>
+    <button class="level-btn" data-level="11">11</button>
+    <button class="level-btn" data-level="12">12</button>
+    <button class="level-btn" data-level="13">13</button>
+    <button class="level-btn" data-level="14">14</button>
+    <button class="level-btn" data-level="15">15</button>
   </div>
   <script type="module" src="/src/main.js"></script>
 </body>
