--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body class="">
+<body class="font-sans">
   <canvas id="canvas">You can't see me</canvas>
   <div id="game-stage" class="stage hidden!">
     <button id="ingame-back-btn">Back</button>
