--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/w.png" />
   <meta name="viewport" content="width=device-width" />
   <title>Word Looper</title>
   <link href="/src/style.css" rel="stylesheet">
@@ -14,16 +14,18 @@
   <canvas id="canvas">You can't see me</canvas>
   <div id="game-stage" class="stage hidden!">
     <button id="ingame-back-btn">Back</button>
+    <button id="hint-btn">Hint</button>
     <div id="level-title"></div>
     <div id="hangman"></div>
     <div id="instruction"></div>
   </div>
   <div id="menu" class="stage">
-    <div class="menu-header">Word Looper</div>
+    <div id="menu-header">
+    </div>
     <div class="menu-options">
-      <button id="play-btn" class="menu-btn border-green-dark text-green-dark">Play!</button>
-      <button id="daily-btn" class="menu-btn border-black">Today's Loop</button>
-      <button id="credits-btn" class="menu-btn border-black">Credits</button>
+      <button id="play-btn" class="menu-btn text-green-dark">Play!</button>
+      <button id="daily-btn" class="menu-btn daily-game-btn">Today's Loop</button>
+      <button id="credits-btn" class="menu-btn">Credits</button>
     </div>
   </div>
   <div id="levels" class="stage hidden!">
@@ -45,8 +47,9 @@
     <button class="level-btn">15</button>
     <button class="level-btn">16</button>
     <div class="col-span-full mr-auto w-full flex mt-8">
-      <button class="mr-auto menu-btn">Today's Loop</button>
-      <button class="ml-auto menu-btn">Quick Play</button>
+      <button class="mr-auto menu-btn daily-game-btn">Today's Loop</button>
+      <button id="single-mode-btn" class="ml-auto menu-btn mx-2">Single Mode</button>
+      <button id="quick-play-btn" class="menu-btn">Quick Play</button>
     </div>
 
   </div>
@@ -57,6 +60,10 @@
     <div class="text-xl text-center">
       A game by<br />
       Edric Yu and Imani Muya
+    </div>
+    <div>
+      Special thanks<br />
+      The Oxford 3000
     </div>
     <button class="back-to-menu-btn col-span-full menu-btn">Back</button>
   </div>
