cleanup, add sound

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     </div>
     <div>
       Special thanks<br />
-      The Oxford 3000
+      The Oxford 3000<br />
+      WordARound (card game)
     </div>
     <button class="back-to-menu-btn col-span-full menu-btn">Back</button>
   </div>
@@ -76,7 +77,7 @@
       Show Hint Button
       <input type="checkbox" id="hint-setting">
     </label>
-    <div>A hints will be available every 30 seconds.</div>
+    <div>Hints will be available every 30 seconds.</div>
 
     <button class="back-to-menu-btn col-span-full menu-btn mt-10">Back</button>
   </div>
