--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
       Settings
     </div>
     <label class="flex items-center gap-2">
+      Audio
+      <input type="checkbox" checked id="audio-setting">
+    </label>
+
+    <label class="flex items-center gap-2">
       Show Hint Button
       <input type="checkbox" id="hint-setting">
     </label>
