more dailies, small fixes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
     </div>
   </div>
   <div id="levels" class="stage hidden!">
-    <button class="back-to-menu-btn col-span-full mr-auto small-back-btn">Back</button>
+    <button class="back-to-menu-btn mr-auto small-back-btn">Back</button>
+    <div class="col-2 col-span-2 text-center leading-none text-xl md:text-3xl bg-accent/50 px-6 py-2 rounded-full w-max mx-auto self-center">
+      Level Select
+    </div>
+    <div class=""></div>
     <button class="level-btn">1</button>
     <button class="level-btn">2</button>
     <button class="level-btn">3</button>
