--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/w.png" />
+  <meta name="theme-color" content="#87b862">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Word Looper</title>
   <link href="/src/style.css" rel="stylesheet">
